; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote.c_extended_remote_create_inferior.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote.c_extended_remote_create_inferior.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TARGET_SIGNAL_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8**)* @extended_remote_create_inferior to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @extended_remote_create_inferior(i8* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  %7 = call i32 (...) @remove_breakpoints()
  %8 = call i32 (...) @extended_remote_restart()
  %9 = call i32 (...) @insert_breakpoints()
  %10 = call i32 (...) @clear_proceed_status()
  %11 = load i32, i32* @TARGET_SIGNAL_0, align 4
  %12 = call i32 @proceed(i32 -1, i32 %11, i32 0)
  ret void
}

declare dso_local i32 @remove_breakpoints(...) #1

declare dso_local i32 @extended_remote_restart(...) #1

declare dso_local i32 @insert_breakpoints(...) #1

declare dso_local i32 @clear_proceed_status(...) #1

declare dso_local i32 @proceed(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
